avtk_sources += files([
  'box.cxx',
  'button.cxx',
  'common.cxx',
  'dial.cxx',
  'dialog.cxx',
  'envelope.cxx',
  'eventeditor.cxx',
  'filebrowser.cxx',
  'group.cxx',
  'helpers.cxx',
  'image.cxx',
  'list.cxx',
  'listitem.cxx',
  'midi.cxx',
  'number.cxx',
  'rotary.cxx',
  'scroll.cxx',
  'slider.cxx',
  'spectrum.cxx',
  'tester.cxx',
  'text.cxx',
  'theme.cxx',
  'ui.cxx',
  'utils.cxx',
  'waveform.cxx',
  'widget.cxx',
])

avtk_incl += [
  include_directories('.'),
]

subdir('pugl')

avtk_sources += pugl_sources
avtk_incl += pugl_incl
avtk_c_args += pugl_c_args
